Fixed input spacing.

--- a/frontend/src/AuthPage.css
+++ b/frontend/src/AuthPage.css
@@ -4,20 +4,7 @@
 }
 
 #AuthPage-home {
-
-}
-
-#AuthPage-outerbox {
   background-color: #D8D9DA;
-  /* height: 100%; */
-  /* padding-top: 10rem; */
-  /* height: 93vh; */
-}
-
-#AuthPage-home-innerbox {
-    background-color: #FFF6E0;
-    margin-left: 10rem;
-    margin-right: 10rem;
 }
 
 #AuthPage-home-authrow {
